--- a/2021w24/index.html
+++ b/2021w24/index.html
@@ -8,7 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
     <script src="/script.js" defer></script>
-    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.glitch.com/a4e872e7-ec74-41ef-91f2-47b6156453e7%2Ffavicon.ico?1550720295540" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.glitch.com/eb654d3c-2546-41ad-b05f-cfd11e18c638%2Ffavicon.ico" />
+    <link rel="icon" type="image/png" href="https://cdn.glitch.com/eb654d3c-2546-41ad-b05f-cfd11e18c638%2Ffavicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="https://cdn.glitch.com/eb654d3c-2546-41ad-b05f-cfd11e18c638%2Ffavicon-16x16.png" sizes="16x16" />
   </head>  
   <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0">
@@ -66,5 +68,18 @@
     </div>        
       </div>
     </footer>
+    <script type="text/javascript">
+    var sc_project=12550764; 
+    var sc_invisible=1; 
+    var sc_security="68d6de4a"; 
+    </script>
+    <script type="text/javascript"
+    src="https://www.statcounter.com/counter/counter.js"
+    async></script>
+    <noscript><div class="statcounter"><a title="free web stats"
+    href="https://statcounter.com/" target="_blank"><img
+    class="statcounter"
+    src="https://c.statcounter.com/12550764/0/68d6de4a/1/"
+    alt="free web stats"></a></div></noscript>
   </body>
 </html>
