First pass at current week's challenge.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p class="lead">My submissions to the <a href="https://www.makeovermonday.co.uk/">Makeover Monday</a> challenge.</p>
         <ul>
           <li>
-            <a href="/2021w24">2021/W24: Which Schools Create the Most Student Loans?</a> <sup><span class="badge rounded-pill bg-secondary">Coming soon</span></sup>
+            <a href="/2021w24">2021/W24: Which Schools Create the Most Student Loans?</a> <sup><span class="badge rounded-pill bg-secondary">WIP</span></sup>
           </li>
         </ul>
       </div>
