--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="h-100">
   <head>
     <title>Makeover Monday 📈📊</title>
+    <meta http-equiv="refresh" content="0;url=https://fourtonfish.com/project/makeover-monday/" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,11 +18,7 @@
       <div class="container">
         <h1 class="mt-5">Makeover Monday 📈📊</h1>
         <p class="lead">My submissions to the <a href="https://www.makeovermonday.co.uk/">Makeover Monday</a> challenge.</p>
-        <ul>
-          <li>
-            <a href="/2021w24">2021/W24: Which Schools Create the Most Student Loans?</a> <sup><span class="badge rounded-pill bg-secondary">WIP</span></sup>
-          </li>
-        </ul>
+        <a class="btn btn-dark" href="https://fourtonfish.com/project/makeover-monday/">Browse</a>
       </div>
     </main>
     <footer class="footer mt-auto py-3 bg-light">
